external-crates/move/crates/move-package-alt/tests/data/manifest_parsing_invalid/duplicate_top_level_field/Move.snap
---
source: crates/move-package-alt/tests/manifest_parsing_test.rs
---
Err(TOML parse error at line 4, column 1
  |
4 | [package]
  | ^
Duplicate key `package` in document root

While parsing a Table Header
)
